--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ addons:
         key_url: http://software.ligo.org/keys/deb/lscsoft.key
       - sourceline: deb-src http://software.ligo.org/lscsoft/debian wheezy contrib
         key_url: http://software.ligo.org/keys/deb/lscsoft.key
+      - ubuntu-toolchain-r-test
     packages:
       # generic packages
       - gcc
@@ -20,7 +21,10 @@ addons:
       - swig
       - bc
       - libfftw3-dev
+      # lalframe dependencies
       - libframe-dev
+      # framecpp dependencies
+      - g++-4.7
       # nds2 dependencies
       - libsasl2-2
       # misc python dependencies
@@ -32,32 +36,30 @@ addons:
 python:
   - '2.7'
   - '3.5'
-  - 'nightly'
 
 env:
   # minimal build, normal tests
-  - PIP_FLAGS="--quiet" MINIMAL=true PYTEST_FLAGS="-v -r s"
+  - PIP_FLAGS="--upgrade" MINIMAL=true PYTEST_FLAGS="-v -r s"
   # normal build, normal tests
-  - PIP_FLAGS="--quiet" MINIMAL=false PYTEST_FLAGS="-v -r s"
+  - PIP_FLAGS="--upgrade" MINIMAL=false PYTEST_FLAGS="-v -r s"
   # normal build, pedantic tests
-  - PIP_FLAGS="--quiet" MINIMAL=false PYTEST_FLAGS="-v -r s --strict"
+  - PIP_FLAGS="--upgrade" MINIMAL=false PYTEST_FLAGS="-v -r s --strict"
   # pre-release build, pedantic tests
-  - PIP_FLAGS="--quiet --pre" MINIMAL=false PYTEST_FLAGS="-v -r s --strict"
+  - PIP_FLAGS="--upgrade --pre" MINIMAL=false PYTEST_FLAGS="-v -r s --strict"
 
 matrix:
   allow_failures:
     - python: '2.7'
-      env: PIP_FLAGS="--quiet --pre" MINIMAL=false PYTEST_FLAGS="-v -r s --strict"
+      env: PIP_FLAGS="--upgrade --pre" MINIMAL=false PYTEST_FLAGS="-v -r s --strict"
     - python: '3.5'
-    - python: 'nightly'
   fast_finish: true
 
 before_install:
   # update pip
   - pip install ${PIP_FLAGS} --upgrade pip
 
-  # build and install numpy first
-  - pip install ${PIP_FLAGS} "numpy>=1.7"
+  # build and install numpy first (for SWIG bindings)
+  - pip install ${PIP_FLAGS} "numpy>=1.10"
 
   # build src packages and set 'latest' package versions (if required)
   - source .travis/build-src-dependencies.sh
@@ -65,25 +67,20 @@ before_install:
   # install cython to speed up scipy build
   - travis_retry pip install ${PIP_FLAGS} --install-option="--no-cython-compile" Cython
 
-  # install testing dependencies
-  - pip install ${PIP_FLAGS} coveralls "pytest>=2.8" unittest2
+  # install dependencies
+  - pip install ${PIP_FLAGS} -r requirements.txt
 
 install:
-  # install dependencies (using version-dependent requirements if needed)
-  - . .travis/install-requirements.sh
-  # build
-  - python setup.py build
+  - pip install .
+
+before_script:
+  - pip list installed
 
 script:
   - . .travis/run-tests.sh
-  - pip install . -vvv
 
 after_success:
   - coveralls
-
-#notifications:
-#  slack:
-#    secure: jQdoSpwNbUnq0Eo7o6Ko7vuhu58LQdfy8jFKxLUnUjv/GLezK/PPAQCU9SgmyDPh1yD8sb5Xa8UtbNfGtpYdwBAGwZxPHz3oQQAflivFwcF6UP7/NlAB9muSOOnL0QfQyX1I4sIKOkX+gkl+TBciX4v58B8NUU02dDkwDqTLUqQ=
 
 cache:
   apt: true
@@ -91,10 +88,14 @@ cache:
   ccache: true
   directories:
     - ./python-${TRAVIS_PYTHON_VERSION}-lal/
+    - ./python-${TRAVIS_PYTHON_VERSION}-framecpp/
+    - ./python-${TRAVIS_PYTHON_VERSION}-ldas-tools-al/
     - ./python-${TRAVIS_PYTHON_VERSION}-lalframe/
     - ./python-${TRAVIS_PYTHON_VERSION}-nds2-client/
 before_cache:
   - rm -f $HOME/.cache/pip/log/debug.log
   - rm -f ./python-${TRAVIS_PYTHON_VERSION}-lal/config.log
+  - rm -f ./python-${TRAVIS_PYTHON_VERSION}-ldas-tools-al/config.log
+  - rm -f ./python-${TRAVIS_PYTHON_VERSION}-framecpp/config.log
   - rm -f ./python-${TRAVIS_PYTHON_VERSION}-lalframe/config.log
-  - rm -f ./python-${TRAVIS_PYTHON_VERSION}-nds2-client/config.log
+  - rm -f ./python-${TRAVIS_PYTHON_VERSION}-nds2-client/CMakeFiles/CMakeError.log ./python-${TRAVIS_PYTHON_VERSION}-nds2-client/CMakeFiles/CMakeOutput.log
