--- a/.travis.yml
+++ b/.travis.yml
@@ -40,8 +40,8 @@ before_install:
 - pip install ${PRE} -r requirements.txt
 - .travis/build-lal.sh
 
-#install:
-#- pip install --editable .
+install:
+- pip install git+https://github.com/scottcoughlin2014/GravitySpy.git
 
 before_script:
 - pip list installed
