--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ python:
 env:
   global:
   - LAL_VERSION="6.18.0"
+  - KERAS_BACKEND=theano
   matrix:
   - PIP_FLAGS="--quiet"
   - PIP_FLAGS="--quiet --pre"
@@ -48,6 +49,10 @@ before_script:
 
 script:
 - pip install ${PRE} unittest2 coveralls "pytest>=2.8"
+- python -c "import keras.backend"
+  # set up keras backend
+- sed -i -e 's/"backend":[[:space:]]*"[^"]*/"backend":\ "'$KERAS_BACKEND'/g' ~/.keras/keras.json;
+- echo -e "Running tests with the following config:\n$(cat ~/.keras/keras.json)"
 - . .travis/run-tests.sh
 
 after_success:
