--- a/docs/Makefile
+++ b/docs/Makefile
@@ -54,6 +54,7 @@ clean:
 
 .PHONY: html
 html: apidoc
+	gravityspyDBs
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
