Never transfered my new setup.py to the requirements.txt needed for running on travis-ci. hopefully we successfully can build python 3 now

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,12 @@
-panoptes-client
-SQLAlchemy
-cython
-six >= 1.5
-lscsoft-glue>=1.55.2
-gitpython
-h5py
-jinja2
-M2Crypto
-pykerberos
-python-cjson
-pyRXP
-scikit-image
-Theano==0.9
-keras
-pandas
-gwpy>=0.7.5
-psycopg2
-https://github.com/ligovirgo/trigfind/archive/v0.4.tar.gz
-ligotimegps
-enum
+enum34
+gwpy>=0.9
 configparser
+panoptes_client
+pandas
+h5py
+psycopg2-binary
+SQLAlchemy
+scikit_image
+keras==2.0.4
+Theano==0.9
+tables
