--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-gwpy>=0.9
+gwpy>=0.10
 configparser
 panoptes_client
-pandas
+pandas; python_version >= '3.5'
+pandas<0.21; python_version == '3.4'
+pandas; python_version == '2.7'
 h5py
 psycopg2-binary
 SQLAlchemy
 scikit_image
-keras==2.0.8
-Theano==0.9
+keras==2.1.6
+Theano==1.0.1
+tensorflow-gpu==1.7.0
 tables
 enum34
