--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - python -m pip install .
 
 before_script:
-  - python -m pip install coveralls "pytest>=3.1" pytest-runner sphinx numpydoc sphinx-bootstrap-theme sphinxcontrib-programoutput sphinx_rtd_theme unittest2
+  - python -m pip install coveralls "pytest>=3.1" pytest-runner sphinx numpydoc sphinx-bootstrap-theme sphinxcontrib-programoutput sphinx_rtd_theme
 
 script:
   # run unit tests
