Alright lots of plotting updates plus versioneer stuff etc

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ style = pep440
 versionfile_source = gravityspy/_version.py
 versionfile_build = gravityspy/_version.py
 tag_prefix = v
-parentdir_prefix =
+parentdir_prefix = gravityspy-
 
 [coverage:run]
 source = gravityspy
