Just trying to get the initial API rewrite over the finish line

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,9 @@
 [aliases]
 test = pytest
 
+[bdist_wheel]
+universal = 1
+
 [tool:pytest]
 addopts = --verbose -r s
 
@@ -17,3 +20,6 @@ source = gravityspy
 omit =
 	gravityspy/tests/*
 	gravityspy/_version.py
+
+[metadata]
+license_file = LICENSE
