--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+os: linux
 
 env:
   global:
@@ -8,26 +9,61 @@ env:
 
 python:
   - '2.7'
-  - '3.4'
   - '3.5'
   - '3.6'
+  - '3.7'
+  - '3.8'
 
 before_install:
-  - pip install pip setuptools --upgrade
+  # install miniconda
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
+        curl -o miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh;
+    else
+        curl -o miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.sh;
+    fi
+  - bash miniconda.sh -b -p ${HOME}/miniconda
+  - source "${HOME}/miniconda/etc/profile.d/conda.sh"
+  - conda config --set always_yes yes --set changeps1 no
+  - conda config --add channels conda-forge
+  - travis_retry conda update --quiet --yes conda
+  - conda info --all
 
 install:
-  - python -m pip install .
+  # install runtime dependencies into conda environment
+  - travis_retry conda create --quiet --name ci python=${TRAVIS_PYTHON_VERSION} pip setuptools
+  - travis_retry conda install --quiet --yes --name ci
+        "dqsegdb>=1.5.0"
+        "gwpy>=1.0.0"
+        "gwtrigfind>=0.7"
+        "h5py>=1.3"
+        "keras=2.0.8"
+        "lscsoft-glue>=1.59.3"
+        "mysqlclient>=1.4.0"
+        "pandas"
+        "psycopg2>=2.7.5"
+        "python-ligo-lw>=1.6.0"
+        "pytables>=3.0.0"
+        "scikit-image"
+        "scikit-learn=0.20.0"
+        "scipy>=0.12.1,<=1.2.1"
+        "sqlalchemy>=1.2.12"
+        "tensorflow-gpu>=2.0.0"
+        "theano=0.9.0"
+  - conda activate ci
+  # install this package
+  - python -m pip install . --editable
 
 before_script:
-  - python -m pip install coveralls "pytest>=3.1" pytest-runner ipython sphinx numpydoc sphinx-bootstrap-theme sphinxcontrib-programoutput sphinx_rtd_theme
+  # install testing requirements
+  - travis_retry conda install --quiet --yes --name ci --file requirements-dev.txt
 
 script:
-  # run unit tests
-  - coverage run ./setup.py test
-  - coverage run --append `which wscan` --help
+  - python -m pytest -rs --verbose --pyargs gravityspy --cov gravityspy
+  - python -m coverage run --append ${CONDA_PREFIX}/bin/wscan --help
 
 after_success:
-- coveralls
+  - python -m pip install coveralls
+  - coveralls
 
 cache:
   pip: true
