--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,9 @@
 # docs
-sphinx
 numpydoc
+pytest >= 3.1.0
+pytest-cov
+pytest-runner
+sphinx
 sphinx-bootstrap-theme
-sphinxcontrib-programoutput
 sphinx_rtd_theme
+sphinxcontrib-programoutput
