--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
+configparser ; python_version < '3.4'
+dqsegdb >= 1.5.0
 gwpy >= 1.0.0
-scipy >= 0.12.1 <=1.2.1
-configparser
-pandas >= 0.22 ; python_version >= \'3.5\'
-pandas >= 0.22 ; python_version == \'2.7\'
-tables > 3.0.0
+gwtrigfind >= 0.7
 h5py >= 1.3
+lscsoft-glue >= 1.59.3
+mysqlclient >= 1.4.0
+pandas >= 0.22 ; python_version >= '3.5'
+pandas >= 0.22 ; python_version == '2.7'
 panoptes-client >= 1.0.3
 psycopg2-binary >= 2.7.5
-sqlalchemy >= 1.2.12
-scikit_image >= 0.14.0
-gwtrigfind >= 0.7
-lscsoft-glue >= 1.59.3
-scikit-learn >= 0.20.0 <=0.20.2
-dqsegdb >= 1.5.0
-mysqlclient >= 1.4.0
 python-ligo-lw >= 1.6.0
+scikit_image >= 0.14.0
+scikit-learn >= 0.20.0 <=0.20.2
+scipy >= 0.12.1 <=1.2.1
+sqlalchemy >= 1.2.12
+tables > 3.0.0
 tensorflow-gpu>=2.0.0
