I have almost revived this godforsaken repo so that all of the build and docs reflect the actual current state of the code and how things are done

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ install:
 
   - conda activate ci
   # install this package
-  - python -m pip install . --editable
+  - python -m pip install --editable .
 
 before_script:
   # install testing requirements
